--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </main>
 
-    <div class="carrosel-filmes">
+    <div class="carrossel-filmes">
         <div class="owl-carousel owl-theme">
             <div class="item"> 
                 <img class="box-filme" src="img/mini1.jpg" alt="Serie Lucifer">
